Setting up structure

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="A basic form powered by ReactJS">
 		<meta name="author" content="Brian Cribb">
-		<link rel="icon" href="../img/favicon.png">
+		<link rel="icon" href="/img/favicon.png">
 
 		<title>Sorted Undoable Table with ReactJS and Redux</title>
 		<!--<link href='http://fonts.googleapis.com/css?family=Viga|Bevan|Open+Sans:300italic,300,600' rel='stylesheet' type='text/css'>-->
@@ -53,9 +53,14 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.8.6/umd/react.production.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.8.6/umd/react-dom.production.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
   <script type='text/babel' src="scripts/scripts.js"></script>
+  <script type='text/babel' src="scripts/components.js"></script>
+  <script type='text/babel' src="scripts/init.js"></script>
 </body>	
 </html>
