--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="A basic form powered by ReactJS">
     <meta name="author" content="Brian Cribb">
-    <link rel="icon" href="react-report-app/img/favicon.png">
+    <link rel="icon" href="img/favicon.png">
 
     <title>Various Reports and Things</title>
     <!--<link href='http://fonts.googleapis.com/css?family=Viga|Bevan|Open+Sans:300italic,300,600' rel='stylesheet' type='text/css'>-->
-    <link rel="stylesheet" href="react-report-app/vendor/bootstrap/4.3.1/bootstrap.min.css">
+    <link rel="stylesheet" href="vendor/bootstrap/4.3.1/bootstrap.min.css">
     <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">-->
-    <link rel="stylesheet" href="react-report-app/vendor/font-awesome-4.7.0/css/font-awesome.min.css">
-    <link href="react-report-app/vendor/fontawesome-free-5.10.1/css/all.css" rel="stylesheet"> <!--load all styles -->
-    <link rel="stylesheet" href="react-report-app/styles/styles.css">
+    <link rel="stylesheet" href="vendor/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link href="vendor/fontawesome-free-5.10.1/css/all.css" rel="stylesheet"> <!--load all styles -->
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <div class="top-nav mb-3 border-bottom shadow-sm p-3 px-md-4">
       <div class="d-flex flex-column flex-md-row align-items-center">
-        <img class="brand-logo mx-0" width="30" height="30" src="react-report-app/img/React-icon.svg" />
+        <img class="brand-logo mx-0" width="30" height="30" src="img/React-icon.svg" />
         <h5 class="brand-name my-0 mr-md-auto font-weight-normal text-white">Site Name</h5>
       </div>
     </div>
@@ -54,17 +54,17 @@
       </div>
     </div>
 
-    <script src="react-report-app/vendor/jquery/jquery-3.4.1.min.js"></script>
-    <!--<script src="react-report-app/https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>-->
-    <script src="react-report-app/vendor/bootstrap/4.3.1/bootstrap.bundle.min.js"></script>
+    <script src="vendor/jquery/jquery-3.4.1.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>-->
+    <script src="vendor/bootstrap/4.3.1/bootstrap.bundle.min.js"></script>
 
-    <script src="react-report-app/vendor/react/16.8.6/react.production.min.js"></script>
-    <script src="react-report-app/vendor/react/16.8.6/react-dom.production.min.js"></script>
-    <!--<script src="react-report-app/https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>-->
+    <script src="vendor/react/16.8.6/react.production.min.js"></script>
+    <script src="vendor/react/16.8.6/react-dom.production.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js"></script>-->
 
-    <script src="react-report-app/vendor/babel-core/6.26.0/babel.min.js"></script>
-    <script type='text/babel' src="react-report-app/scripts/scripts.js"></script>
-    <script type='text/babel' src="react-report-app/scripts/components.js"></script>
-    <script type='text/babel' src="react-report-app/scripts/init.js"></script>
+    <script src="vendor/babel-core/6.26.0/babel.min.js"></script>
+    <script type='text/babel' src="scripts/scripts.js"></script>
+    <script type='text/babel' src="scripts/components.js"></script>
+    <script type='text/babel' src="scripts/init.js"></script>
   </body>	
 </html>
