--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="A basic form powered by ReactJS">
+    <meta name="description" content="A basic app for displaying reports - powered by ReactJS">
     <meta name="author" content="Brian Cribb">
     <link rel="icon" href="img/favicon.png">
 
