Adding some RTL data.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <select class="form-control mr-sm-2" id="language-dropdown">
                   <option value="en">English</option>
                   <option value="kl">Klingon</option>
+                  <option value="rtl">Right to Left</option>
                 </select>
               </form>
             </div>
