More RTL stuff.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div id="primarynav" class="primarynav"><i className="fas fa-spinner fa-spin"></i> Loading Navigation...</div>
         </div>
         <div class="col-12 col-md-9 col-xl-10">
-          <div id="report-container"></div>
+          <div id="content"></div>
         </div>
       </div>
     </div>
